 * New function: xbt_dynar_is_empty()
 * New function: xbt_fifo_get_last_item()
 * Bug fix in xbt_dynar_shrink(): use the right element size
 * Use library init/fini functions for our initialization.
   - you can use logs and other feature as soon as you want in your
     code (even before the xbt_init / MSG_init)
   - xbt_exit is now a no-op and produce a warning when used.

 Build chain: bug fixes and further polishing
 * Fix the 'make install' target. 
   No need to use 'make install-simgrid' anymore
 * Introduce a 'make dist' target compiling a *source* archive
   'make package' compiles a binary archive (not well tested)
 * Compile java files only on need

 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr> 

SimGrid (3.4.1) stable; urgency=low

 The "Polishing easter eggs is probably a good idea" release.
 This is a bug fixes release only.
 

 Java Bindings
 * Fix a bug preventing the tasks from begin garbage collected.

 MSG
 * Fix a bug occuring when a host involved in a communication fails.
   This was not detected properly by the other peer involved in the
   communication. Now, it's reported as a network error.

 SimDag
 * Warn the user about loop dependencies in data flow of DAX files
 * Obey the control-flow dependencies of DAX files

 Cmake
 * Add option "enable_smpi" allowing to not compile SMPI. 
   Probably useful for the (Mac) users experiencing a build error here
 * Improve the detection of lua5.1 and ruby1.8

 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr> Tus, 04 May 2010 28 16:11:16 +0100

SimGrid (3.4) stable; urgency=low

 The "Easter in Cargese" release. Also known as (major changes):
 
  * the "se habla Java, Ruby 話せます, fala-se Lua (and deaf-friendly)"
    ~> bindings were greatly improved
    ~> new tracing infrastructure for better visualization introduced
    
  * the "Welcome to configury modernity" release.
    ~> we switched from autotools to cmake, and improved our cdash

